fix: navigation fix right align nav elements

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: end;
   flex: 1 1 75%;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 1rem;
 }
 .nav__link--btn {
